--- a/public/css/pdf.css
+++ b/public/css/pdf.css
@@ -35,11 +35,30 @@ body {
 }
 
 #page1 {
-    background-image: url('https://www.blankertshortlease.nl/wp-content/uploads/2023/07/Cupra-Willem.png');
+    background-image: url('https://www.blankertshortlease.nl/wp-content/uploads/2023/08/bg-groen.png');
     background-position: 40% 50%;
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+#page1-1 {
+    background-image: url('https://www.blankertshortlease.nl/wp-content/uploads/2023/08/bg-groen.png');
+    background-position: 40% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#pageAanvullend {
+    background-image: url('https://www.blankertshortlease.nl/wp-content/uploads/2023/08/Aanvullende-services-Offertetool.png');
+    background-position: 40% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.hidden{
+    display: none;
+}
+
 
 #page2 {
     /* display: none; */
